# baras

./: .gitignore  CHANGELOG.md  Cargo.toml  latest.json
.github/workflows/: build.yml  release.yml  sync.yaml
app/: Cargo.toml
app/assets/: styles.css
app/src/: api.rs  app.rs  types.rs
app/src-tauri/: Cargo.toml  supercharge.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  router.rs
app/src-tauri/src/audio/: mod.rs  path.rs  service.rs
app/src-tauri/src/commands/: effects.rs  encounters.rs  overlay.rs  query.rs  service.rs  starparse.rs
app/src-tauri/src/overlay/: manager.rs  metrics.rs  spawn.rs  state.rs  types.rs
app/src-tauri/src/service/: handler.rs  mod.rs
app/src-tauri/src/state/: mod.rs
app/src/components/: ability_icon.rs  charts_panel.rs  combat_log.rs  data_explorer.rs  effect_editor.rs  mod.rs  modifier_editor.rs  settings_panel.rs  slider.rs  sound_picker.rs
app/src/components/encounter_editor/: challenges.rs  timers.rs  triggers.rs
changelogs/: v2026.5.29.md  v2026.6.17.md
core/: Cargo.toml
core/definitions/effects/: dcds.toml  dots.toml  hots.toml
core/definitions/encounters/flashpoints/: korriban_incursion.toml
core/definitions/encounters/operations/: dxun.toml  explosive_conflict.toml  karaggas_palace.toml  propagator_core.toml  r4_anomaly.toml  scum_and_villainy.toml  temple_of_sacrifice.toml  terror_from_beyond.toml  the_dread_fortress.toml  the_dread_palace.toml  the_ravagers.toml  toborros_courtyard.toml  xenoanalyst.toml
core/src/: lib.rs  serde_defaults.rs
core/src/dsl/: audio.rs  definition.rs
core/src/dsl/triggers/: mod.rs
core/src/effects/: active.rs  definition.rs  mod.rs  tracker.rs  tracker_tests.rs
core/src/encounter/: combat.rs  entity_info.rs  mod.rs
core/src/game_data/: discipline.rs
core/src/query/: breakdown.rs  combat_log.rs  effects.rs  mod.rs  search_parser.rs  time_series.rs
core/src/signal_processor/: combat_state.rs  counter.rs  phase.rs  processor.rs  processor_tests.rs  signal.rs  trigger_eval.rs
core/src/timers/: active.rs  definition.rs  manager.rs  manager_tests.rs  mod.rs  preferences.rs  signal_handlers.rs
overlay/: Cargo.toml
overlay/src/: frame.rs  icons.rs  lib.rs  main.rs  manager.rs  renderer.rs
overlay/src/overlays/: ability_queue.rs  alerts.rs  boss_health.rs  challenges.rs  cooldowns.rs  dot_tracker.rs  effects_ab.rs  metric.rs  mod.rs  raid.rs  timers.rs
overlay/src/platform/: mod.rs  windows.rs
overlay/src/widgets/: progress_bar.rs
parse-worker/: Cargo.toml
types/src/: lib.rs
