[package]
name = "baras-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
# `query` pulls in the DataFusion stack (used only by `core::query`). Default-on
# so the app/validate get the Data Explorer; the parse-worker opts out via
# `default-features = false` to keep the sidecar binary DataFusion-free.
default = ["query"]
query = ["dep:datafusion", "dep:datafusion-functions-table"]

[dependencies]
baras-types = { path = "../types" }
confy = { version = "2.0.0", features = ["toml_conf"] }
hashbrown = "0.16.1"
memchr = "2.7.6"
notify = "8.2"
memmap2 = "0.9.9"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1.48.0", features = ["full"] }
lasso = { version = "0.7.3", features = ["multi-threaded"] }
chrono = { version = "0.4.42", features = ["serde"] }
phf = { version = "0.13.1", features = ["macros"] }
dirs = "6.0.0"
encoding_rs = "0.8"
toml = "0.9"
arrow = { version = "58", default-features = false, features = ["ipc"] }
parquet = { version = "58", default-features = false, features = [
  "arrow",
  "lz4",
  "snap",
  "zstd",
] }
datafusion = { version = "54", default-features = false, optional = true, features = [
  "parquet",
  "sql",
  "nested_expressions",
] }
datafusion-functions-table = { version = "54.0", default-features = false, optional = true }
tracing = { workspace = true }

[build-dependencies]
phf_codegen = "0.13.1"
