[package]
name = "baras-parse-worker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "baras-parse-worker"
path = "src/main.rs"

[dependencies]
# default-features = false drops the `query` feature → no DataFusion in the sidecar
baras-core = { path = "../core", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rayon = "1.11"
dirs = "6.0"
encoding_rs = "0.8"
memchr = "2.7"
memmap2 = "0.9"
arrow = { version = "58", default-features = false }
parquet = { version = "58", default-features = false, features = ["arrow", "lz4"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
